# psc-atlas

./: .gitignore  Dockerfile  README-data-formats.md  README.md  compose-dev.sh  compose-prod.sh  docker-compose.dev.yml  docker-compose.sh  docker-compose.yml  start-script.sh
.github/: PULL_REQUEST_TEMPLATE.md
backend/: README.md  alembic.ini  ingester.sh  load-data.py  pyproject.toml  start-script.dev.sh  start-script.sh  update-uv-lock
backend/alembic/versions/: 01cf41403ef0_initial_tables.py  a2b90a14a6f2_initial_tables.py
backend/psc-atlas/: main.py  pyproject.toml
backend/psc_atlas/: __init__.py  engine.py  load_data.py  models.py  session.py
backend/psc_atlas/alembic/: env.py
backend/psc_atlas/alembic/versions/: 0bad379facf2_initial_tables.py  640a367a7369_initial_tables.py  dbec1a9295eb_initial_tables.py
backend/src/psc_atlas/: __init__.py  api_types.py  engine.py  load_data.py  models.py  session.py
backend/src/psc_atlas/routers/: core.py  measurement.py  sample.py  variable.py
caddy/: Caddyfile
frontend/: .gitignore  Dockerfile.update-package-lock  README.md  next.config.ts  package-lock.json  package.json  start-script.sh  update-package-lock
frontend/content/: contact.md
frontend/public/content/: contact.md  publications.json  the-project.md
frontend/src/app/: example-data.json  globals.css  globals.scss  layout.tsx  page.tsx  utils.ts
frontend/src/app/(pages)/publications/: page.tsx
frontend/src/app/(pages)/the-project/: LeaderCard.tsx  page.module.scss  page.tsx
frontend/src/app/explore-data/: page.tsx
(+8 files in other folders)
