[project]
name = "psc-atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.119.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
]
